# RosePad

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY POLICY  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: IOS.yml  aur.yml  linux.yml  macos.yml  main.yml  windows.yml
src/: App.tsx  Editor.tsx  Home.tsx  MainPage.css  Settings.tsx  editor.tsx  home.tsx  nav.tsx  settings.tsx
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.microsoftstore.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  main.rs  schema_v1.sql  settings.rs  workspace.rs
src-tauri/windows/msi/: main.wxs
src/components/: buttonSettings.module.css  buttonSettings.tsx  colorPalette.tsx  fontSizePicker.tsx  headingPicker.tsx  modal.module.css  modal.tsx  nav.css  nav.tsx  navSettings.module.css  navSettings.tsx  optionsPicker.tsx  project.module.css  project.tsx  prompt.module.css  prompt.tsx  select.tsx  stylesMenu.module.css  stylesMenu.tsx
src/components/editor/: editorTabs.tsx  fontSizePicker.tsx  headingPicker.tsx  projectInfo.tsx  projectPickerModal.tsx  stylesMenu.tsx
src/components/home/: modal.tsx
src/components/home/projectList/: fileExt.tsx  folder.tsx  list.tsx  project.tsx
src/components/settings/: buttonSettings.tsx  navSettings.tsx
src/components/styles/: buttonSettings.module.css  nav.module.css  navSettings.module.css  project.module.css  prompt.module.css  stylesMenu.module.css
src/core/: FlowerSVG.tsx  bridge.ts  cache.ts  changelog.tsx  db.ts  discord_rpc.ts  projectHandler.ts  settings.ts  settingsApi.ts  settingsContext.ts  toast.tsx  useFsReload.ts  workspaceContext.tsx
src/core/editor/: editorBridge.ts  footnote.ts  rEvent.ts  rKeymap.tsx  rMarks.ts  rPanel.tsx  rRules.ts  rSchema.ts
src/core/editor/command/: Align.ts  FontSize.ts  Highlight.ts  Lists.ts  TextColor.ts
src/hooks/: useHandleFileOpen.ts  useLatest.ts  useModalKeydown.ts
src/router/: main.tsx
src/scripts/: JsonComponent.ts  discord_rpc.ts  projectHandler.ts  projectSaving.ts  themeManager.ts
src/styles/: Editor.module.css  Home.module.css  Main.css  Settings.module.css  Toast.css
src/styles/components/: colorPalette.module.css  modal.module.css
src/styles/components/editor/: editorTabs.module.css  mirror.css  (+4 more)
src/utils/: color.ts
(+9 files in other folders)
