[package]
name = "rosepad"
version = "0.1.3"
description = "Simple and Beatiful Text Editor"
authors = ["Alexsandar Goranov"]
license = "GNU GPL-3"
edition = "2021"
repository = "https://github.com/TMG8047KG/RosePad"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rosepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
discord-ipc-rp = "0.1.1"
lazy_static = "1.4"
tauri-plugin-os = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2"
